--- a/index.html
+++ b/index.html
@@ -4,120 +4,70 @@
 <head>
   <meta charset="utf-8">
   <title>Romsy Lowes' Personal Site</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img width="250" height="250" src="sharfo2022.jpeg" alt="Lowes profile picture"></td>
+      <td><img class="turnup"
+          src='https://avataaars.io/?avatarStyle=Transparent&topType=ShortHairDreads01&accessoriesType=Prescription02&hairColor=Black&facialHairType=BeardLight&facialHairColor=BrownDark&clotheType=GraphicShirt&clotheColor=Black&graphicType=Hola&eyeType=Close&eyebrowType=AngryNatural&mouthType=Disbelief&skinColor=DarkBrown' />
+      </td>
       <td>
-        <h1>Romario Luciano Marciano (Romsy) Lowes</h1>
-        <p><em>Web Developer</em></p>
-        <p>In 1989 geboren in Amsterdam, met roots in Suriname (dus houd ik van lekker eten). In 2014 heb ik mijn mbo-diploma Marketing en communicatie behaald. Van 2016 tot 2019 ben ik werkzaam geweest als customer due diligence analist bij
-          Binckbank,
-          (sinds toen drink ik koffie). Per 2019 heb ik een onderneming in de mobiliteit en vanaf 2020 ben ik mijn vol gaan richten op de it-sector en in het bijzonder, web development. Tevens ben ik oprichter van VvSo, de <a
-            href="http://www.vvso.org"><strong>Vereniging voor Surinaamse ondernemers</strong></a>.</p>
+        <h1>I'm Romsy Lowes,</h1>
+        <h4>a web designer.</h4>
+        <p><em>🇸🇷</em></p>
+        <p>Anno 1989 born in Amsterdam. Founded <a href="http://www.vvso.org"><strong>VvSo</strong></a> in 2020.</p>
       </td>
     </tr>
   </table>
   <hr>
-  <h3>Education</h3>
-  <ul>
-    <li>Marcanti College, Vmbo, 2005</li>
-    <li>Roc Top, Mbo, 2014</li>
-  </ul>
-  <hr>
-  <h3>Work Experience</h3>
 
-  <table cellspacing="10">
 
-    <thead>
-      <tr align=left>
-        <th>Dates</th>
-        <th>Work</th>
+  <center>
+    <img class="turnright"
+      src='https://avataaars.io/?avatarStyle=Transparent&topType=ShortHairTheCaesar&accessoriesType=Blank&hairColor=Black&facialHairType=BeardLight&facialHairColor=BrownDark&clotheType=BlazerSweater&eyeType=Happy&eyebrowType=FlatNatural&mouthType=Smile&skinColor=DarkBrown' />
+
+
+    <h3>Hi There.</h3>
+    <p class="a">In 2020 I started my career as a web-developer. I'm based in Amsterdam, The Netherlands. I love to create something out of nothing for web and mobile devices.</p>
+    <hr>
+
+    <h2>What Can I Do So Far</h2>
+    <table>
+      <tr>
+        <td>
+          <h3>Learning phase</h3>
+
+          <p class="a">I'm now in the phase of learning the basics of html, css and javascript. I start to understand how this all works by building a personal website.</p>
+        </td>
+        <td align=right><img class="turndown"
+            src='https://avataaars.io/?avatarStyle=Transparent&topType=ShortHairTheCaesar&accessoriesType=Blank&hairColor=Black&facialHairType=BeardLight&facialHairColor=BrownDark&clotheType=BlazerSweater&clotheColor=Heather&eyeType=Default&eyebrowType=DefaultNatural&mouthType=Serious&skinColor=DarkBrown' />
+        </td>
+
       </tr>
-    </thead>
 
-    <tbody>
-    </tbody>
+      <tr>
+        <td><img class="turnleft"
+            src='https://avataaars.io/?avatarStyle=Transparent&topType=ShortHairTheCaesar&accessoriesType=Blank&hairColor=Black&facialHairType=BeardLight&facialHairColor=BrownDark&clotheType=BlazerSweater&eyeType=Wink&eyebrowType=FlatNatural&mouthType=Default&skinColor=DarkBrown' />
+        </td>
+        <td>
+          <h3>Develop my codingskills</h3>
+          <p class="a">I try to do some online courses to develop my skills and planning to do a study in coding, so I can build professional websites.</p>
+        </td>
+      </tr>
+    </table>
 
-    <tfoot>
-    </tfoot>
+    <h2>Let's Do This</h2>
 
-    <tr>
-      <td>2016-2019</td>
-      <td>Customer Due Diligence Analyst at Binckbank</td>
-    </tr>
-
-    <tr>
-      <td>2018-2020</td>
-      <td>Mobility Service-Provider at Lowes Services</td>
-    </tr>
-
-    <tr>
-      <td>2020-....</td>
-      <td>Founder of VvSo</td>
-    </tr>
-
-  </table>
-
-  <hr>
-  <h3>Coding Skills</h3>
-
-  <table cellspacing="10">
-
-    <tr>
-      <td>
-        <table cellspacing="10">
-
-          <tr>
-            <td>iOs Development</td>
-            <td>⭐️⭐️⭐️⭐️⭐️</td>
-          </tr>
-
-          <tr>
-            <td>Web Development</td>
-            <td>⭐️⭐️⭐️⭐️</td>
-          </tr>
-
-          <tr>
-            <td>HTML Development</td>
-            <td>⭐️⭐️⭐️</td>
-          </tr>
-
-        </table>
-      </td>
-      <td>
-
-        <table cellspacing="10">
-
-          <tr>
-            <td>iOs Development</td>
-            <td>⭐️⭐️⭐️⭐️⭐️</td>
-          </tr>
-
-          <tr>
-            <td>Web Development</td>
-            <td>⭐️⭐️⭐️⭐️</td>
-          </tr>
-
-          <tr>
-            <td>HTML Development</td>
-            <td>⭐️⭐️⭐️</td>
-          </tr>
-
-        </table>
-      </td>
-    </tr>
-
-  </table>
+    <p class="a">If you can help me develop my skills or have some advice/tips, please feel free to get in contact with my trough my contactpage.</p>
 
 
-  <hr>
+    <hr>
 
-  <a href="hobbies.html">My Hobbies</a><br>
-  <a href="contact.html">Contact Me</a>
-
+    <a href="hobbies.html">My Hobbies</a><br>
+    <a href="contact.html">Contact Me</a>
+  </center>
 </body>
 
 </html>
